<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    app:cardBackgroundColor="#EDECEC"
    app:cardCornerRadius="30dp"
    app:cardElevation="0dp"
    app:cardUseCompatPadding="true">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_book"
            android:layout_width="200dp"
            android:layout_height="200dp"
            tools:srcCompat="@tools:sample/avatars" />

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/title"
                android:textSize="24sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/tv_author"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/author"
                android:textSize="18sp" />

            <TextView
                android:id="@+id/tv_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:text="20 000 VND"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_addToCartHome"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="#11006f"
                android:layout_marginRight="20dp"
                android:backgroundTint="@color/white"
                android:text="@string/addToCart" />

        </LinearLayout>

    </LinearLayout>

</androidx.cardview.widget.CardView>